2002-12-30  Matthew Vanecek <mevanecek@yahoo.com>
	* src/backend/postgres/PostgresBackend.c: Added some ENTER
	and LEAVE statements to more of the functions.

	* src/backend/postgres/upgrade.c: Changed all the DATETIME
	SQL data types to TIMESTAMP.  DATETIME will not be in Postgresql
	as of 7.3.
	
	* src/backend/postgres/functions.sql: Changed all the DATETIME
	types in the DDL to TIMESTAMP.

	* src/backend/postgres/table-create.sql: Changed all the DATETIME
	types in the DDL to TIMESTAMP.

	* src/backend/postgres/table-audit.sql: Changed all the DATETIME
	types in the DDL to TIMESTAMP.

2002-12-30  Christian Stimming  <stimming@tuhh.de>

	* src/app-utils/prefs.scm, src/app-utils/global-options.c: Rename
	"Default currency" option to "New Account default currency" since
	*everybody* asks about that one.  Was reported in #102043, 
	#100466, #99364, #87729.

	* src/business/business-gnome/dialog-invoice.c
	(gnc_invoice_id_changed_cb): More i18n fixes. Don't split up
	strings.

	* src/business/business-gnome/glade/*.glade: Correct spelling
	error.

	* src/engine/FreqSpec.c: Fix the i18n comments for the translators.

	* src/gnome-utils/gnc-dense-cal.c: i18n'ize the dense calendar
	widget.

2002-12-29  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/dialog-scheduledxaction.c, dialog-sxsincelast.c: Some
	i18n fixes.

2002-12-28  Joshua Sled  <jsled@asynchronous.org>

	* src/register/register-gnome/formulacell-gnome.c: Changed
	FormulaCell from MOD_SX to MOD_REGISTER.

	* src/engine/FreqSpec.c (xaccFreqSpecGetFreqStr):
	s/g_string_sprintf/snprintf/, as the former can't handle the
	re-ordered format parameters which the po-files use; fixes
	Bug#101650.

2002-12-28  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-transfer.c: Revert pricedb lookup at
	warlord's request.

	* src/bin/test/Makefile.am:
	* src/doc/Makefile.am:
	* src/import-export/hbci/Makefile.am: 
	* src/import-export/ofx/Makefile.am: Get 'make distcheck' working again.
